--- a/src/components/CryptoCurrency/coins.css
+++ b/src/components/CryptoCurrency/coins.css
@@ -15,18 +15,29 @@
   box-shadow: 0px 0px 12px #18191b;
   border-radius: 8px;
   margin: 2rem 1rem;
-  padding: 0.7rem 1rem;
+  padding: 0.7rem 4rem 0.7rem 1rem  ;
   font-weight: 700;
 }
 
 .coin-name {
-  margin-left: 1rem;
+  width: 141px;
+}
+
+.coin-price {
+  width: 73px;
+}
+
+.day-percent {
+  margin-left: -3rem;
+}
+
+.week_percent {
 }
 
 .coin-row {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   background-color: #26272b;
   box-shadow: 0px 0px 12px #18191b;
   border-radius: 8px;
@@ -46,9 +57,14 @@
   width: auto;
 }
 
+.coin-price {
+  width: 73px;
+}
+
 .img-symbol {
   display: flex;
   align-items: center;
+  width: 141px;
 }
 
 .percentage {
